Добавил логирование и исключения
Пока не всё работает

--- a/config.ini
+++ b/config.ini
@@ -2,6 +2,6 @@
 ##Бик банка
 bic = 0498057463
 ##Код валюты
-valuta = 810
+valuta = 81п0
 ##first_group для юриков 40817 для физиков 40702
-first_group = 40817
+first_group = 408п17
