--- a/config.ini
+++ b/config.ini
@@ -1,7 +1,7 @@
 [connect]
-##Бик банка
+##Р‘РёРє Р±Р°РЅРєР°
 bic = 0498057463
-##Код валюты
+##РљРѕРґ РІР°Р»СЋС‚С‹
 valuta = 810
-##first_group для юриков 40817 для физиков 40702
+##first_group РґР»СЏ СЋСЂРёРєРѕРІ 40817 РґР»СЏ С„РёР·РёРєРѕРІ 40702
 first_group = 40817
