--- a/config.ini
+++ b/config.ini
@@ -1,7 +1,9 @@
-[connect]
-##Бик банка
-bic = 0498057463
-##Код валюты
-valuta = 810
-##first_group для юриков 40817 для физиков 40702
-first_group = 40817
+[tab1]
+bic =
+valuta =
+first_group =
+
+[tab2]
+bic = 
+account = 
+
