В config.ini теперь сохраняется состояние чекбоксов

--- a/config.ini
+++ b/config.ini
@@ -1,9 +1,11 @@
 [tab1]
-bic =
-valuta =
-first_group =
+bic = 
+valuta = 
+first_group = 
+corr_enabled = 0
 
 [tab2]
 bic = 
 account = 
+corr_enabled = 0
 
