[-] Мелкие правки кода и комментариев [-] Теперь "поверх всех окон" работает, если расскоментировать Window.setWindowFlags(Window.windowFlags() | QtCore.Qt.WindowStaysOnTopHint) в main.py

--- a/config.ini
+++ b/config.ini
@@ -1,11 +1,11 @@
 [tab1]
-bic = 
-valuta = 
-first_group = 
-corr_enabled = 0
+bic = 040702802
+valuta = 810
+first_group = 33333
+corr_enabled = 2
 
 [tab2]
-bic = 
-account = 
-corr_enabled = 0
+bic = 123423141
+account = 12345810671016806427
+corr_enabled = 2
 
